# Detect3D

./: CMakeLists.txt  LICENSE.txt  main.cpp
